--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,28 +10,32 @@
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/src/bot.py",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "python": "${workspaceFolder}/.venv/Scripts/python.exe"
         },
         {
             "name": "Online Checker Debugger",
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/src/vrc_online_checker.py",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "python": "${workspaceFolder}/.venv/Scripts/python.exe"
         },
         {
             "name": "test VRC file",
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/src/test_vrc.py",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "python": "${workspaceFolder}/.venv/Scripts/python.exe"
         },
         {
             "name": "Sub Manager GumRoad",
             "type": "debugpy",
             "request": "launch",
             "program": "${workspaceFolder}/src/gumroad_subscription_manager.py",
-            "console": "integratedTerminal"
+            "console": "integratedTerminal",
+            "python": "${workspaceFolder}/.venv/Scripts/python.exe"
         }
     ]
 }
