--- a/docker/Dockerfile-bot
+++ b/docker/Dockerfile-bot
@@ -1,21 +1,22 @@
 # Dockerfile-bot
 
-# Use an official Python runtime as a parent image
-FROM python:3.10-slim
+FROM python:3.12-slim AS runtime
 
-# Set the working directory in the container
+ENV PIP_NO_CACHE_DIR=1 \
+	PIP_DISABLE_PIP_VERSION_CHECK=1 \
+	PYTHONDONTWRITEBYTECODE=1 \
+	PYTHONUNBUFFERED=1
+
 WORKDIR /app
 
-COPY config/other_configs/requirements.txt requirements.txt
+COPY config/other_configs/requirements-bot.txt ./requirements.txt
+RUN pip install --no-compile -r requirements.txt
 
-# Install any needed packages specified in requirements.txt
-RUN pip install --no-cache-dir -r requirements.txt
+# Create a non-root user
+RUN useradd --create-home --uid 10001 appuser
+COPY --chown=appuser:appuser src/ ./src/
+USER appuser
 
-# Copy the entire project
-COPY src/ src/
-
-# Expose the port
 EXPOSE 5002
 
-# Run bot.py when the container launches
 CMD ["python", "src/bot.py"]
